some work on Gpt4

--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -161,7 +161,12 @@ Find the roots of the characteristic polynomial
 to determine the eigenvalues of $A$.
 \end{subactivity}
 \begin{subactivity}
-Compute the kernel of the transformation given by $A-2I$ to determine all the eigenvectors associated to the eigenvalue $2$.
+Compute the kernel of the transformation given by
+\[
+  A-2I
+    =
+  \begin{bmatrix} 2-2 & 2 \\ 0 & 3-2 \end{bmatrix}
+\] to determine all the eigenvectors associated to the eigenvalue $2$.
 \end{subactivity}
 \begin{subactivity}
 Compute the kernel of the transformation given by $A-3I$ to determine all the eigenvectors associated to the eigenvalue $3$.
