--- a/modules/6-G/day3.tex
+++ b/modules/6-G/day3.tex
@@ -97,6 +97,7 @@ Thus the characteristic polynomial of \(A\) is
   \(A-\lambda I\) for
   $A=\begin{bmatrix} 6 & -2 & 1 \\ 17 & -5 & 5 \\ -4 & 2 & 1 \end{bmatrix}$.
 
+  \scalebox{.8}{\parbox{1.2\linewidth}{
   \begin{align*}
     \begin{bmatrix} 6-\lambda & -2 & 1 \\ 17 & -5-\lambda & 5 \\ -4 & 2 & 1-\lambda \end{bmatrix}
   &=
@@ -148,7 +149,7 @@ Thus the characteristic polynomial of \(A\) is
     (6-\lambda)((-5-\lambda)(1-\lambda)-10)
     +2(17(1-\lambda)+20)
     -(-4(-5-\lambda)-34)
-  \end{align*}
+  \end{align*}}}
 \end{activity}
 
 \begin{activity}{15}
